@startuml dhifa_collection

Entity users {
    * email: VARCHAR(30) <<PK>>
    --
    * password: VARCHAR(30)
    * fullname: VARHCAR(100)
    * address: VARHCAR(200)
    * phone_number: VARHCAR(20)
}

Entity products {
    * product_id: INT(11) AUTO_INCREMENT <<PK>>
    --
    * name: VARCHAR(100)
    * price: INT(8)
    * qty: INT(2)
}

Entity orders {
    * order_id: VARCHAR(50) <<PK>> <<FK>>
    --
    * email: VARCHAR(30) <<PK>> <<FK>>
    * order_date: DATE
    * total_payment: INT(8)
    * status: ENUM("Open", "Checkout", "Verified", "Close")
}

Entity order_detail {
    * id: INT(11) AUTO_INCREMENT
    --
    * order_id: VARCHAR(50) <<PK>>
    * product_id: INT(11) <<FK>>
    * price: INT(8)
    * qty: INT(2)
    * amount: INT(8)
}

users |o--o{ orders: memiliki
orders ||--o{ order_detail: memiliki
order_detail ||--|{ products: memiliki

@enduml